在Java本地代码沙箱启用Java安全管理器，将模版类中的运行代码改为抽象方法